# happyverse-ml-eval-alex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check.sh  evaluator.py  pyproject.toml
.github/workflows/: format-and-lint.yml  pytest.yml
data/: job_description.txt  questions.txt
data/transcripts/: sample_bad.txt  sample_good.txt
src/: run_eval.py  run_evaluation.py
src/intervieweval/cache/: manager.py
src/intervieweval/config/: prompts.yaml  settings.py
src/intervieweval/evaluators/: base.py  communication.py  orchestrator.py  plausibility.py  synthesis.py  technical.py
src/intervieweval/models/: evaluation.py
src/intervieweval/prompts/: manager.py
src/intervieweval/tools/: search.py  verification.py
src/intervieweval/utils/: logging.py  metrics.py
src/intervieweval/visualization/: visualization.py
tests/: test_imports.py  test_transcript_parsing.py
